# bebop_vicon_control

./: CMakeLists.txt  README.md  autonomous_landing.py  bebop_api_server.py  bebop_control.launch  bebop_controller.py  bebop_geofence.py  test_api.py
launch/: bebop_control.launch  bebop_pid_keyboard.launch
src/: bebop_api_client.py  update_goal_keyboard.py
